feat: creating frontend board

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -118,3 +118,67 @@
   0% { opacity: 1; }
   100% { opacity: 0; }
 }
+
+.square {
+  height: 12.5%;
+  width: 12.5%;
+  position: absolute;
+}
+
+.square-black {
+  background-color: #ce8919;
+}
+
+.square-light {
+  background-color: #fce4b2;
+}
+
+.rank-1 {
+  top:87.5%;
+}
+.rank-2 {
+  top:75%;
+}
+.rank-3 {
+  top:62.5%;
+}
+.rank-4 {
+  top:50%;
+}
+.rank-5 {
+  top:37.5%;
+}
+.rank-6 {
+  top:25%;
+}
+.rank-7 {
+  top:12.5%;
+}
+.rank-8 {
+  top: 0;
+}
+
+.file-a {
+  left: 0;
+}
+.file-b {
+  left:12.5%;
+}
+.file-c {
+  left:25%;
+}
+.file-d {
+  left:37.5%;
+}
+.file-e {
+  left:50%;
+}
+.file-f {
+  left:62.5%;
+}
+.file-g {
+  left:75%;
+}
+.file-h {
+  left:87.5%;
+}
