feat: showing pieces on the board

--- a/lib/who_is_better_web/live/match_live.html.heex
+++ b/lib/who_is_better_web/live/match_live.html.heex
@@ -19,6 +19,13 @@
                     <% end %>
                 <% end %>
             </div>
+            <div id="pieces-container">
+                <%= for %{file: f, name: name, rank: r} <- @board.pieces do %>
+                    <div
+                        class={"piece piece-#{name} file-#{f} rank-#{r}"}
+                    ></div>
+                <% end %>
+            </div>
         </div>
     </div>
 </div>
