--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -182,3 +182,59 @@
 .file-h {
   left:87.5%;
 }
+
+.piece {
+  height: 12.5%;
+  width: 12.5%;
+  background-size: cover;
+  position: absolute;
+  transition: top ease-in-out 500ms, left ease-in-out 500ms;
+}
+
+.piece-k {
+  background-image: url("/images/pieces/king_black.svg")
+}
+
+.piece-K {
+  background-image: url("/images/pieces/king_white.svg")
+}
+
+.piece-q {
+  background-image: url("/images/pieces/queen_black.svg")
+}
+
+.piece-Q {
+  background-image: url("/images/pieces/queen_white.svg")
+}
+
+.piece-r {
+  background-image: url("/images/pieces/rook_black.svg")
+}
+
+.piece-R {
+  background-image: url("/images/pieces/rook_white.svg")
+}
+
+.piece-b {
+  background-image: url("/images/pieces/bishop_black.svg")
+}
+
+.piece-B {
+  background-image: url("/images/pieces/bishop_white.svg")
+}
+
+.piece-n {
+  background-image: url("/images/pieces/knight_black.svg")
+}
+
+.piece-N {
+  background-image: url("/images/pieces/knight_white.svg")
+}
+
+.piece-p {
+  background-image: url("/images/pieces/pawn_black.svg")
+}
+
+.piece-P {
+  background-image: url("/images/pieces/pawn_white.svg")
+}
