--- a/lib/who_is_better_web/live/match_live.html.heex
+++ b/lib/who_is_better_web/live/match_live.html.heex
@@ -3,9 +3,6 @@
 <p>FEN: <%= @fen %></p>
 
 <div class="row">
-    <div class="column column-25">
-        <a href="/new" class="button">New Game</a>
-    </div>
     <div class="column column-50">
         <div style="position:relative;height:0;width:100%;padding-bottom:100%;">
             <div id="board-container">
@@ -26,6 +23,31 @@
                     ></div>
                 <% end %>
             </div>
+        </div>
+    </div>
+    <div class="column column-25">
+        <div class="row">
+            <span>Who is better?</span>
+        </div>
+        <div class="row">
+            <button phx-click="check-better-white">White</button>
+        </div>
+        <div class="row">
+            <button phx-click="check-better-black">Black</button>
+        </div>
+        <div class="row" style="width:50%;">
+            <%= if @won == true  do %>
+                <div>
+                    <img src="/images/evaluation/correct.svg" />
+                </div>
+            <% end %>
+
+            <%= if @won == false  do %>
+                <div>
+                    <img src="/images/evaluation/wrong.svg" />
+                </div>
+            <% end %>
+
         </div>
     </div>
 </div>
